--- a/sass/header.scss
+++ b/sass/header.scss
@@ -987,6 +987,9 @@
           box-sizing: border-box;
           margin-right: 7px;
           text-align: center;
+          @media(max-width: 1171px){
+            width: 31%;
+          }
           &:hover{
             color: #074e23;
             border-color: #620909;
@@ -1023,539 +1026,6 @@
     }
   }
 }
-
-.header_mini {
-  width: 100%;
-  min-height: 38px;
-  background: #f6f6f6;
-  border-bottom: 1px solid #dadfdd;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  z-index: 88;
-  .ring_wrap{
-    position: relative;
-    width: auto;
-    float: left;
-    &:hover{
-
-      .ring_wrap_block{
-        display: block;
-      }
-    }
-    &_block {
-      display: none;
-      width: 100%;
-      float: left;
-      position: absolute;
-      left: -51.5px;
-      top:38px;
-      width: 283px;
-      background: #ffffff;
-      padding-left: 10px;
-      z-index: 999;
-      padding-top: 10px;
-      -webkit-box-shadow: -2px 9px 18px 0px rgba(0, 0, 0, 0.2);
-      -moz-box-shadow: -2px 9px 18px 0px rgba(0, 0, 0, 0.2);
-      box-shadow: -2px 9px 18px 0px rgba(0, 0, 0, 0.2);
-      @media(max-width: 770px){
-        left: -51.5px;/**/
-      }
-      &_sity {
-        float: left;
-        width: 50%;
-        p {
-          width: 100%;
-          font: 13px/13px Verdana;
-          font-weight: bold;
-          color: #2f2f2f;
-          margin-bottom: 5px;
-          letter-spacing: -0.2px;
-          span {
-            font-weight: normal;
-          }
-        }
-        .whatsapp{
-          width: 100%;
-          margin-top: 20px;
-          .zag{
-            width: 100%;
-            i{
-              float: left;
-              width: 35px;
-              height: 39px;
-              background-image: url("../img/sprite_footer.png");
-              background-position: 0px -34px;
-              margin-left: 6px;
-            }
-            p{
-              font: 13px/20px Verdana;
-              margin-bottom: 0px;
-              span{
-                display: block;
-                color: #6b6b6b;
-                font-size: 9px;
-
-              }
-            }
-            a{
-              width: 100%;
-              font: 11px/17px Verdana;
-              font-weight: normal;
-              font-weight: bold;
-              color: #2f2f2f;
-              letter-spacing: -0.5px;
-
-            }
-          }
-        }
-      }
-      &_mobile {
-        width: 50%;
-        float: left;
-        margin-top: -3px;
-        p {
-          width: 100%;
-          font: 11px/17px Verdana;
-          font-weight: bold;
-          color: #2f2f2f;
-          margin-bottom: 7px;
-          letter-spacing: -0.5px;
-          i {
-            display: inline-block;
-            height: 17px;
-            width: 17px;
-            margin-right: 4px;
-          }
-          .tel1 {
-            width: 18px;
-            background-image: url("../img/sprite_footer.png");
-            background-position: -20px 0px;
-          }
-          .tel2 {
-            background-image: url("../img/sprite_footer.png");
-            background-position: 0px -17px;
-          }
-          .tel3 {
-            background-image: url("../img/sprite_footer.png");
-            background-position: -17px -17px;
-          }
-          .tel4 {
-            width: 20px;
-            background-image: url("../img/sprite_footer.png");
-            background-position: 0px 0px;
-          }
-          a {
-            color: #0151bd;
-            text-decoration: underline;
-            margin-left: 4px;
-            font-weight: bold;
-            &:hover {
-              color: #25613c;
-            }
-          }
-
-        }
-      }
-    }
-    @media(max-width: 1009px){
-      width: 180px;
-      padding: 0px 11px;
-      padding-left: 11px;
-      padding-left: 11px;
-      border: 1px solid #004191;
-      height: 48px;
-      float: left;
-      box-sizing: border-box;
-    }
-    @media(max-width: 770px){
-      font-size: 11px;
-      cursor: pointer;
-    }
-    @media(max-width: 388px){
-      display: block;
-      max-width: 180px;
-      width: 100%;
-      box-sizing: border-box;
-      float: none;
-      margin: 5px auto;
-    }
-    .ring {
-      width: 100%;
-      font: 16px/25px Verdana;
-      font-weight: bold;
-      color: #840000;
-      @media(max-width: 1009px){
-        display: block;
-        color: #004191;
-        line-height: 20px;
-        float: left;
-        text-align: left;
-        font-size: 15px;
-      }
-      @media(max-width: 770px){
-        max-width: 160px;
-        font-size: 11px;
-        cursor: pointer;
-      }
-      @media(max-width: 357px){
-        display: block;
-        margin: 5px auto;
-        width: 100%;
-        max-width: 180px;
-        float: none;
-      }
-      i {
-        display: inline-block;
-        width: 8px;
-        height: 6px;
-        background-image: url("../img/sprite_header.png");
-        background-position: -354px -70px;
-
-        margin-top: 9.5px;
-        margin-left: 10.1px;
-        @media(max-width: 1070px) {
-          display: none;
-        }
-      }
-
-
-
-      p {
-        font: 13px/20px Verdana;
-        font-weight: bold;
-        color: #363636;
-        @media(max-width: 840px) {
-          color: #840000;
-        }
-        @media(max-width: 423px) {
-
-          letter-spacing: normal;
-        }
-        span {
-          display: none;
-          @media(max-width: 840px) {
-            display: inline;
-          }
-        }
-      }
-
-      span {
-        font-size: 13px;
-        font-weight: normal;
-        @media(max-width: 423px) {
-          font-weight: bold;
-        }
-      }
-    }
-  }
-  @media(max-width: 375px){
-    height: 40px;
-  }
-  .header_nav {
-    width: 35.5%;
-    float: left;
-    @media(max-width: 1106px) {
-      width: 50%
-    }
-    @media(max-width: 1007px){
-      width: 100%;
-    }
-    @media(max-width: 636px) {
-      width: 100%;
-      margin-left: 0px;
-      position: relative;
-    }
-    nav {
-      display: none;
-    }
-    .header_nav_sandwich {
-      float: left;
-      display: inline-block;
-      width: 32px;
-      height: 32px;
-      border: 1px solid #023d98;
-      margin-top: 4px;
-      box-sizing: border-box;
-      background: #010206;
-      padding: 1px;
-      @media(max-width: 405px){
-        float: right;
-      }
-      &:hover{
-        background: none;
-        border: 2px solid #b80000;
-        @include radius(3px);
-        i{
-          border: none;
-          span{
-            background: #b80000;
-            width: 20px;
-          }
-        }
-
-      }
-      i {
-        display: block;
-        width: 100%;
-        height: 100%;
-        @include radius(2px);
-        border: 1px solid #eaea00;
-        box-sizing: border-box;
-      }
-      span {
-        display: block;
-        width: 18px;
-        height: 2px;
-        margin-bottom: 4px;
-        margin-left: auto;
-        margin-right: auto;
-        background: #eaea00;
-        &:nth-child(1) {
-          margin-top: 3px;
-        }
-        &:nth-last-child(1) {
-          display: block;
-          margin-bottom: 3px;
-        }
-      }
-
-    }
-    .header_nav_logo_line {
-      width: auto;
-      float: left;
-      background: none;
-      @media(max-width: 1007px){
-        float: right;
-      }
-      .logo_mini{
-        display: none;
-      }
-      @media (max-width: 1009px) {
-        .logo_mini{
-          display: none;
-        }
-
-      }
-      @media(max-width: 405px){
-        float: left;
-        a{
-          margin-left: 0px;
-        }
-      }
-      .header_nav_logo_line_sity {
-        display: none;
-      }
-      .header_nav_logo_line_schem {
-        display: none;
-      }
-      .header_nav_logo_line_logo {
-
-
-        .logo_big {
-          width: 26px;
-          height: 25px;
-          background-image: url("../img/sprite_header.png");
-          background-position: -286px -64px;
-          font-size: 0px;
-          padding: 0px;
-          display: block;
-          margin-top: 7px;
-          margin-left: 27px;
-          @media(max-width: 405px){
-            margin-left: 0px;
-          }
-          &:hover{
-            background-image: url("../img/sprite_header.png");
-            background-position: -31px -175px;
-          }
-          &:before {
-            display: none;
-          }
-        }
-
-        p {
-          display: none;
-        }
-
-      }
-    }
-    .header_nav_katalog {
-      background: none;
-      border: none;
-      min-height: 0px;
-      text-align: right;
-
-      .header_nav_katalog_all {
-        display: none;
-      }
-      .button {
-        display: none;
-      }
-      .all_mini {
-        display: block;
-        text-align: left;
-        margin-top: 7px;
-        float: right;
-        width: 115px;
-        height: 28px;
-        background: #e3e3e3;
-        border: 1px solid #5d7489;
-        @include radius(3px);
-        font: 16px/28px Verdana;
-        text-transform: uppercase;
-        color: #1d529f;
-        position: relative;
-        padding-left: 7px;
-        box-sizing: border-box;
-        letter-spacing: 0.6px;
-        @media(max-width: 1007px){
-          display: none;
-        }
-        &:hover{
-          color: #b80000;
-        }
-        &:before {
-          content: '';
-          display: block;
-          position: absolute;
-          width: 8px;
-          height: 6px;
-          background: url("../img/sprite_header.png");
-          background-position: -354px -70px;
-          top: 11px;
-          right: 7px;
-          margin-left: 10.1px;
-        }
-        @media(max-width: 405px){
-          display: none;
-        }
-      }
-      .open {
-        &:before {
-          background: url("../img/sprite_header.png");
-          background-position: -354px -64px;
-        }
-      }
-    }
-  }
-  .header_kontakt {
-    width: 33%;
-    margin-left: 4.5%;
-    float: left;
-    @media(max-width: 1106px) {
-      width: 80%;
-      display: inline-block;
-      float: none;
-      margin-left: 10%;
-    }
-    @media(max-width: 636px) {
-      width: 100%;
-      margin-left: 0px;
-    }
-    @media(max-width: 374px) {
-      text-align: center;
-      .ring {
-        display: inline-block;
-        float: none;
-        cursor: auto;
-      }
-    }
-  }
-  .header_kontakt_action {
-    display: none;
-  }
-  .header_kontakt_line_button_line {
-    display: none;
-  }
-  .header_kontakt_line {
-    width: 100%;
-    min-height: 0;
-    background: none;
-    @media(max-width: 405px){
-      text-align: center;
-    }
-    @media(max-width: 375px){
-      margin-top: -35px;
-    }
-    .ring {
-      float: left;
-      width: auto;
-      display: block;
-      font: 16px/38px Verdana;
-      font-weight: normal;
-      font-weight: bold;
-      color: #840000;
-      cursor: auto;
-      @media(max-width: 405px){
-        float: none;
-        display: inline-block;
-        cursor: pointer;
-      }
-
-      span {
-        font-size: 12px;
-      }
-
-      p {
-        display: none;
-      }
-      i {
-        width: 20px;
-        height: 20px;
-        background: url("../img/sprite_header.png");
-        background-position: -334px -64px;
-        margin-left: 0px;
-        float: left;
-        margin-top: 9px;
-        margin-right: 10px;
-      }
-    }
-    .meil {
-      float: right;
-      font: 14px/38px Verdana;
-      color: #024753;
-      @media(max-width: 405px){
-        float: none;
-        display: inline-block;
-      }
-      @media(max-width: 375px){
-        display: none;
-      }
-      p {
-        display: none;
-      }
-      .icon-mail_header {
-        display: inline-block;
-        width: 24px;
-        height: 16px;
-        background: url("../img/sprite_header.png");
-        background-position: -49px -122px;
-        margin-top: 11px;
-        margin-right: 9px;
-      }
-
-    }
-
-  }
-
-  .header__user_info {
-    width: 24.01%;
-    @media(max-width: 1106px) {
-      width: 50%;
-
-    }
-    .header__user_info_info {
-      display: none;
-    }
-
-    .basket {
-      margin-right: 5px;
-    }
-  }
-  .header__user_info_product_line{
-    @media(max-width: 1007px){
-      display: none;
-    }
-  }
-}
+/*************************************************header_mini**********************************************************/
+@import "header_mini";
+/**********************************************************************************************************************/
