--- a/css/header.css
+++ b/css/header.css
@@ -828,6 +828,9 @@
           box-sizing: border-box;
           margin-right: 7px;
           text-align: center; }
+          @media (max-width: 1171px) {
+            .header__user_info_info_select_line_select {
+              width: 31%; } }
           .header__user_info_info_select_line_select:hover {
             color: #074e23;
             border-color: #620909; }
@@ -852,6 +855,7 @@
           background-image: url("../img/sprite_header.png");
           background-position: -354px -64px; }
 
+/*************************************************header_mini**********************************************************/
 .header_mini {
   width: 100%;
   min-height: 38px;
@@ -865,6 +869,19 @@
     position: relative;
     width: auto;
     float: left; }
+    @media (max-width: 1009px) {
+      .header_mini .ring_wrap {
+        border: none;
+        width: auto; } }
+    @media (max-width: 432px) {
+      .header_mini .ring_wrap .ring_wrap_block {
+        left: 0px; } }
+  @media (max-width: 432px) and (max-width: 396px) {
+    .header_mini .ring_wrap .ring_wrap_block {
+      left: -51.5px; } }
+    @media (max-width: 396px) {
+      .header_mini .ring_wrap {
+        max-width: 200px; } }
     .header_mini .ring_wrap:hover .ring_wrap_block {
       display: block; }
     .header_mini .ring_wrap_block {
@@ -961,16 +978,6 @@
             font-weight: bold; }
             .header_mini .ring_wrap_block_mobile p a:hover {
               color: #25613c; }
-    @media (max-width: 1009px) {
-      .header_mini .ring_wrap {
-        width: 180px;
-        padding: 0px 11px;
-        padding-left: 11px;
-        padding-left: 11px;
-        border: 1px solid #004191;
-        height: 48px;
-        float: left;
-        box-sizing: border-box; } }
     @media (max-width: 770px) {
       .header_mini .ring_wrap {
         font-size: 11px;
@@ -978,7 +985,6 @@
     @media (max-width: 388px) {
       .header_mini .ring_wrap {
         display: block;
-        max-width: 180px;
         width: 100%;
         box-sizing: border-box;
         float: none;
@@ -987,7 +993,21 @@
       width: 100%;
       font: 16px/25px Verdana;
       font-weight: bold;
-      color: #840000; }
+      color: #840000;
+      position: relative; }
+      @media (max-width: 396px) {
+        .header_mini .ring_wrap .ring {
+          display: block;
+          margin: 5px auto; } }
+      .header_mini .ring_wrap .ring:before {
+        content: '';
+        position: absolute;
+        width: 8px;
+        height: 6px;
+        background-image: url("../img/sprite_header.png");
+        background-position: -354px -70px;
+        right: -11px;
+        top: 16px; }
       @media (max-width: 1009px) {
         .header_mini .ring_wrap .ring {
           display: block;
@@ -998,7 +1018,6 @@
           font-size: 15px; } }
       @media (max-width: 770px) {
         .header_mini .ring_wrap .ring {
-          max-width: 160px;
           font-size: 11px;
           cursor: pointer; } }
       @media (max-width: 357px) {
@@ -1006,7 +1025,6 @@
           display: block;
           margin: 5px auto;
           width: 100%;
-          max-width: 180px;
           float: none; } }
       .header_mini .ring_wrap .ring i {
         display: inline-block;
@@ -1016,9 +1034,6 @@
         background-position: -354px -70px;
         margin-top: 9.5px;
         margin-left: 10.1px; }
-        @media (max-width: 1070px) {
-          .header_mini .ring_wrap .ring i {
-            display: none; } }
       .header_mini .ring_wrap .ring p {
         font: 13px/20px Verdana;
         font-weight: bold;
@@ -1040,23 +1055,23 @@
         @media (max-width: 423px) {
           .header_mini .ring_wrap .ring span {
             font-weight: bold; } }
-  @media (max-width: 375px) {
-    .header_mini {
-      height: 40px; } }
   .header_mini .header_nav {
     width: 35.5%;
     float: left; }
     @media (max-width: 1106px) {
       .header_mini .header_nav {
-        width: 50%; } }
+        width: 40%; } }
     @media (max-width: 1007px) {
       .header_mini .header_nav {
         width: 100%; } }
-    @media (max-width: 636px) {
+    @media (max-width: 770px) {
+      .header_mini .header_nav {
+        float: left;
+        width: auto; } }
+    @media (max-width: 546px) {
       .header_mini .header_nav {
         width: 100%;
-        margin-left: 0px;
-        position: relative; } }
+        text-align: center; } }
     .header_mini .header_nav nav {
       display: none; }
     .header_mini .header_nav .header_nav_sandwich {
@@ -1069,9 +1084,9 @@
       box-sizing: border-box;
       background: #010206;
       padding: 1px; }
-      @media (max-width: 405px) {
+      @media (max-width: 770px) {
         .header_mini .header_nav .header_nav_sandwich {
-          float: right; } }
+          display: none; } }
       .header_mini .header_nav .header_nav_sandwich:hover {
         background: none;
         border: 2px solid #b80000;
@@ -1109,19 +1124,21 @@
       width: auto;
       float: left;
       background: none; }
-      @media (max-width: 1007px) {
-        .header_mini .header_nav .header_nav_logo_line {
-          float: right; } }
-      .header_mini .header_nav .header_nav_logo_line .logo_mini {
-        display: none; }
       @media (max-width: 1009px) {
         .header_mini .header_nav .header_nav_logo_line .logo_mini {
           display: none; } }
-      @media (max-width: 405px) {
+      @media (max-width: 1007px) {
+        .header_mini .header_nav .header_nav_logo_line {
+          float: right; } }
+      @media (max-width: 750px) {
         .header_mini .header_nav .header_nav_logo_line {
           float: left; }
           .header_mini .header_nav .header_nav_logo_line a {
             margin-left: 0px; } }
+      @media (max-width: 546px) {
+        .header_mini .header_nav .header_nav_logo_line {
+          float: none;
+          display: inline-block; } }
       .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_sity {
         display: none; }
       .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_schem {
@@ -1136,7 +1153,7 @@
         display: block;
         margin-top: 7px;
         margin-left: 27px; }
-        @media (max-width: 405px) {
+        @media (max-width: 770px) {
           .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo .logo_big {
             margin-left: 0px; } }
         .header_mini .header_nav .header_nav_logo_line .header_nav_logo_line_logo .logo_big:hover {
@@ -1200,23 +1217,31 @@
     width: 33%;
     margin-left: 4.5%;
     float: left; }
-    @media (max-width: 1106px) {
+    @media (max-width: 1170px) {
       .header_mini .header_kontakt {
-        width: 80%;
-        display: inline-block;
-        float: none;
-        margin-left: 10%; } }
-    @media (max-width: 636px) {
+        float: right;
+        width: 42%;
+        margin-left: 0px; } }
+    @media (max-width: 1008px) {
+      .header_mini .header_kontakt {
+        float: left;
+        margin-left: 0px;
+        margin: 0px 10%;
+        width: 80%; } }
+    @media (max-width: 770px) {
+      .header_mini .header_kontakt {
+        width: 70%;
+        margin-left: 0px;
+        float: right; } }
+    @media (max-width: 546px) {
+      .header_mini .header_kontakt {
+        width: 90%;
+        margin: 0px 5%; } }
+    @media (max-width: 432px) {
       .header_mini .header_kontakt {
         width: 100%;
-        margin-left: 0px; } }
-    @media (max-width: 374px) {
-      .header_mini .header_kontakt {
-        text-align: center; }
-        .header_mini .header_kontakt .ring {
-          display: inline-block;
-          float: none;
-          cursor: auto; } }
+        text-align: center;
+        margin: 0; } }
   .header_mini .header_kontakt_action {
     display: none; }
   .header_mini .header_kontakt_line_button_line {
@@ -1228,9 +1253,6 @@
     @media (max-width: 405px) {
       .header_mini .header_kontakt_line {
         text-align: center; } }
-    @media (max-width: 375px) {
-      .header_mini .header_kontakt_line {
-        margin-top: -35px; } }
     .header_mini .header_kontakt_line .ring {
       float: left;
       width: auto;
@@ -1266,9 +1288,10 @@
         .header_mini .header_kontakt_line .meil {
           float: none;
           display: inline-block; } }
-      @media (max-width: 375px) {
+      @media (max-width: 396px) {
         .header_mini .header_kontakt_line .meil {
-          display: none; } }
+          display: block;
+          margin: 5px auto; } }
       .header_mini .header_kontakt_line .meil p {
         display: none; }
       .header_mini .header_kontakt_line .meil .icon-mail_header {
@@ -1281,9 +1304,11 @@
         margin-right: 9px; }
   .header_mini .header__user_info {
     width: 24.01%; }
-    @media (max-width: 1106px) {
+    @media (max-width: 1170px) {
       .header_mini .header__user_info {
-        width: 50%; } }
+        width: 15%; }
+        .header_mini .header__user_info .compare {
+          display: none; } }
     .header_mini .header__user_info .header__user_info_info {
       display: none; }
     .header_mini .header__user_info .basket {
@@ -1291,3 +1316,5 @@
   @media (max-width: 1007px) {
     .header_mini .header__user_info_product_line {
       display: none; } }
+
+/**********************************************************************************************************************/
