--- a/css/modal.css
+++ b/css/modal.css
@@ -110,6 +110,25 @@
   border: 1px solid #687178;
   box-sizing: border-box;
   display: none; }
+  .brend_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .brend_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
   .brend_block_box_line {
     float: left;
     width: 100%; }
@@ -243,6 +262,25 @@
   -webkit-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2); }
+  .area_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .area_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
   .area_block_power_line {
     width: 100%;
     float: left; }
@@ -441,6 +479,25 @@
   padding: 0px 21px;
   box-sizing: border-box;
   display: none; }
+  .price_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .price_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
   .price_block_link {
     float: left;
     width: 25.28%; }
@@ -540,6 +597,25 @@
   box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   padding-left: 3.3%;
   box-sizing: border-box; }
+  .multi_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .multi_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
   @media (max-width: 1175px) {
     .multi_block {
       right: 0px; } }
@@ -743,6 +819,25 @@
   box-sizing: border-box;
   display: none;
   z-index: 9; }
+  .services_block .close {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .services_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
   @media (max-width: 800px) {
     .services_block {
       min-width: 0;
@@ -868,6 +963,25 @@
   -moz-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
   display: none; }
+  .question_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    .question_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
   @media (max-width: 1170px) {
     .question_block {
       left: auto;
@@ -1427,7 +1541,7 @@
     border-top: none; }
     .comment_block .individuals_block .slick-arrow {
       margin-top: 0px;
-      top: 60px;
+      top: 41px;
       background-color: transparent; }
     .comment_block .individuals_block .slick-prev {
       left: -5px; }
@@ -2018,11 +2132,15 @@
 .modal_fon {
   width: 100%;
   height: 100%;
+  max-height: 100vh;
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0px;
   left: 0px;
   z-index: 99;
-  display: none;
-  overflow-y: auto;
-  overflow-x: hidden; }
+  display: none; }
+  .modal_fon .modal_wrap {
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto; }
