--- a/css/modal.css
+++ b/css/modal.css
@@ -822,15 +822,18 @@
   .services_block .close {
     display: block;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 2px;
+    right: 2px;
     width: 33px;
     height: 33px;
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     background: #FFFFFF;
-    text-align: center; }
+    text-align: center;
+    -webkit-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2); }
     .services_block .close i {
       display: inline-block;
       width: 15px;
@@ -2143,4 +2146,5 @@
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    overflow-y: auto; }
+    overflow-y: auto;
+    position: absolute; }
