--- a/css/style.css
+++ b/css/style.css
@@ -2218,15 +2218,18 @@ table {
   .services_block .close {
     display: block;
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 2px;
+    right: 2px;
     width: 33px;
     height: 33px;
     border-radius: 50%;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     background: #FFFFFF;
-    text-align: center; }
+    text-align: center;
+    -webkit-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.2); }
     .services_block .close i {
       display: inline-block;
       width: 15px;
@@ -3539,7 +3542,8 @@ table {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    overflow-y: auto; }
+    overflow-y: auto;
+    position: absolute; }
 
 /**********************************************************************************************************************/
 /**************************************************Калькулятор мощности************************************************/
@@ -4309,7 +4313,7 @@ table {
               display: none; }
               @media (max-height: 800px) {
                 .power_calculator_coontent_rezult_block_input_line p span {
-                  margin-top: 8px; } }
+                  margin-top: 6px; } }
             .power_calculator_coontent_rezult_block_input_line p .namber {
               font: 18px/44px Arial;
               font-weight: bold;
