--- a/css/header_mini.css
+++ b/css/header_mini.css
@@ -424,7 +424,8 @@
     .header_mini .header_kontakt_line .meil {
       float: right;
       font: 14px/38px Verdana;
-      color: #024753; }
+      color: #024753;
+      margin-right: 10px; }
       @media (max-width: 405px) {
         .header_mini .header_kontakt_line .meil {
           float: none;
@@ -448,7 +449,7 @@
     @media (max-width: 1170px) {
       .header_mini .header__user_info {
         width: 15%; }
-        .header_mini .header__user_info .compare {
+        .header_mini .header__user_info .basket {
           display: none; } }
     .header_mini .header__user_info .header__user_info_info {
       display: none; }
