--- a/sass/price.scss
+++ b/sass/price.scss
@@ -1322,7 +1322,7 @@
                 float: left;
                 margin-right: 1%;
               }
-              a {
+              p {
                 display: inline-block;
                 float: left;
                 width: 94.52%;
