--- a/css/price.css
+++ b/css/price.css
@@ -610,6 +610,11 @@
             width: 100%; } }
         .section_product_wrap_price_wrap_section_block h2 {
           width: 100%; }
+          @media (max-width: 758px) {
+            .section_product_wrap_price_wrap_section_block h2 {
+              width: 96.4%;
+              margin-right: 1.8%;
+              float: right; } }
           @media (max-width: 538px) {
             .section_product_wrap_price_wrap_section_block h2 {
               line-height: 20px;
@@ -779,6 +784,10 @@
       .section_product_wrap_rig h2 {
         float: right;
         width: 80%; }
+      @media (max-width: 758px) {
+        .section_product_wrap_rig h2 {
+          width: 96.4%;
+          margin-right: 1.8%; } }
       @media (max-width: 502px) {
         .section_product_wrap_rig h2 {
           line-height: 20px;
