--- a/sass/price.scss
+++ b/sass/price.scss
@@ -761,6 +761,11 @@
         }
         h2 {
           width: 100%;
+          @media(max-width: 758px){
+            width: 96.4%;
+            margin-right: 1.8%;
+            float: right;
+          }
           @media(max-width: 538px) {
             line-height: 20px;
             padding-top: 5px;
@@ -987,6 +992,10 @@
         width: 80%;
       }
       h2 {
+        @media(max-width: 758px){
+          width: 96.4%;
+          margin-right: 1.8%;
+        }
         @media(max-width: 502px) {
           line-height: 20px;
           padding-top: 4px;
